# kernel_xiaomi_sm8650-modules

nxp/opensource/driver/: BUILD.bazel  define_modules.bzl
qcom/opensource/ais-kernel/: Android.mk  Kbuild  camera_modules.bzl
qcom/opensource/ais-kernel/config/: pineapple.mk
qcom/opensource/ais-kernel/drivers/: camera_main.c  camera_main.h
qcom/opensource/audio-kernel/: Android.mk  Kbuild  audio_kernel_modules.mk  audio_kernel_product_board.mk  audio_modules.bzl
qcom/opensource/audio-kernel/asoc/: Kbuild  msm-audio-defs.h  msm_common.c  msm_common.h  msm_dailink.h  pineapple.c
qcom/opensource/audio-kernel/config/: pineappleauto.conf  (+1 more)
qcom/opensource/bt-kernel/: BUILD.bazel  target.bzl
qcom/opensource/camera-kernel/: Kbuild  camera_modules.bzl
qcom/opensource/dataipa/: BUILD.bazel
qcom/opensource/datarmnet/: BUILD.bazel
qcom/opensource/datarmnet-ext/aps/: BUILD.bazel
qcom/opensource/datarmnet-ext/sch/: BUILD.bazel
qcom/opensource/datarmnet-ext/shs/: BUILD.bazel
qcom/opensource/display-drivers/: BUILD.bazel  target.bzl
qcom/opensource/dsp-kernel/: BUILD.bazel
qcom/opensource/eva-kernel/: BUILD.bazel  peridot.bzl
qcom/opensource/fingerprint/: BUILD.bazel
qcom/opensource/graphics-kernel/: BUILD.bazel  kgsl.c
qcom/opensource/mmrm-driver/: BUILD.bazel  target.bzl
qcom/opensource/securemsm-kernel/: BUILD.bazel
qcom/opensource/spu-kernel/: BUILD.bazel
qcom/opensource/synx-kernel/: BUILD.bazel  peridot.bzl
qcom/opensource/touch-drivers/: BUILD.bazel  Kbuild  target.bzl  touch_modules.bzl
qcom/opensource/video-driver/: BUILD.bazel
(+310 files in other folders)
