package(
    default_visibility = ["//visibility:public"],
)

load(":define_aps.bzl", "define_aps")
load("//build/kernel/kleaf:kernel.bzl", "ddk_module")

define_aps("pineapple", "consolidate")

define_aps("pineapple", "gki")

define_aps("peridot", "consolidate")

define_aps("peridot", "gki")

define_aps("pitti", "consolidate")

define_aps("pitti", "gki")

define_aps("volcano", "consolidate")

define_aps("volcano", "gki")
