package(
    default_visibility = ["//visibility:public"],
)

load(":define_sch.bzl", "define_sch")
load("//build/kernel/kleaf:kernel.bzl", "ddk_module")

define_sch("pineapple", "consolidate")

define_sch("pineapple", "gki")

define_sch("peridot", "consolidate")

define_sch("peridot", "gki")

define_sch("pitti", "consolidate")

define_sch("pitti", "gki")

define_sch("volcano", "consolidate")

define_sch("volcano", "gki")
